# rust-arch

./: .envrc  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  cliff.toml  config.sops.env  flake.nix
.cargo/: audit.toml
.github/: renovate.json5
.github/workflows/: codespell.yml  release.yaml  renovate.yaml  shellcheck.yml
.taskfiles/: pre-commit.yaml
crates/api/: Cargo.toml
crates/apps/: Cargo.toml
crates/apps/src/: logging.rs  main.rs
crates/arch-api/: Cargo.toml
crates/arch-api/src/: error.rs  http.rs  lib.rs
crates/arch-api/src/http/: handlers.rs  health.rs  v1.rs
crates/arch-api/src/http/v1/: health.rs  items.rs
crates/arch-core/: Cargo.toml
crates/arch-core-models/: Cargo.toml
crates/arch-core/src/: health.rs  lib.rs
crates/arch-db/: Cargo.toml
crates/arch-db-pg/: Cargo.toml
crates/arch-db-pg/migrations/down/: 0001_setup.sql
crates/arch-db-pg/migrations/up/: 0001_setup.sql
crates/arch-db-pg/src/: lib.rs  migration.rs
crates/arch-db/src/: adapters.rs  error.rs  lib.rs  m20220101_000001_create_table.rs  m20240815_124028_create_items.rs
crates/arch-db/src/adapters/: item.rs
crates/arch-db/src/entities/: items.rs  mod.rs  prelude.rs
crates/arch-domain-api/: Cargo.toml
crates/arch-domain-api/src/: error.rs  health.rs  item.rs  lib.rs
crates/arch-domain-core/: Cargo.toml
crates/arch-domain-core/src/: health.rs  item.rs  lib.rs
crates/arch-domain-models/: Cargo.toml
crates/arch-domain-models/src/: item.rs
crates/arch-utils/: Cargo.toml
crates/arch-utils/src/: arcbox.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: health.rs  lib.rs
crates/rust-arch/: Cargo.toml  build.rs
crates/rust-arch/src/: args.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
crates/utils/: Cargo.toml
scripts/: create-database  create-release  release
