[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"                                 # managed by release.sh
edition = "2021"
authors = ["Scotte Zinn <scotte@zinn.ca>"]
license = "MIT"
homepage = "https://github.com/szinn/rust-arch"
repository = "https://github.com/szinn/rust-arch"
readme = "README.md"
rust-version = "1.79"

[workspace.dependencies]
arch-api = { path = "crates/api" }
arch-core = { path = "crates/core" }

async-trait = "0.1.81"
thiserror = "1.0.63"
tokio-graceful-shutdown = "0.15.0"

[workspace.dependencies.tokio]
version = "1.39.1"
default-features = false
features = ["full"]

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["log"]
