[workspace]
resolver = "2"
members = [
    "crates/rust-arch",
    "crates/arch-api",
    "crates/arch-core",
    "crates/arch-utils",
]

[workspace.package]
version = "0.2.0" # managed by release.sh
edition = "2021"
authors = ["Scotte Zinn <scotte@zinn.ca>"]
license = "MIT"
homepage = "https://github.com/szinn/rust-arch"
repository = "https://github.com/szinn/rust-arch"
readme = "README.md"
rust-version = "1.80"

[workspace.dependencies]
arch-api = { path = "crates/arch-api" }
arch-core = { path = "crates/arch-core" }
arch-utils = { path = "crates/arch-utils" }

async-trait = "0.1.81"
thiserror = "1.0.63"
tokio-graceful-shutdown = "0.15.0"

[workspace.dependencies.tokio]
version = "1.39.1"
default-features = false
features = ["full"]

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["log"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling
