[workspace]
resolver = "2"
members = [
    "crates/rust-arch",
    "crates/arch-api",
    "crates/arch-db",
    "crates/arch-domain-api",
    "crates/arch-domain-core",
    "crates/arch-domain-models",
    "crates/arch-utils",
]

[workspace.package]
version = "0.3.0" # managed by release.sh
edition = "2021"
authors = ["Scotte Zinn <scotte@zinn.ca>"]
license = "MIT"
homepage = "https://github.com/szinn/rust-arch"
repository = "https://github.com/szinn/rust-arch"
readme = "README.md"
rust-version = "1.80"

[workspace.dependencies]
arch-api = { path = "crates/arch-api" }
arch-db = { path = "crates/arch-db" }
arch-domain-api = { path = "crates/arch-domain-api" }
arch-domain-core = { path = "crates/arch-domain-core" }
arch-domain-models = { path = "crates/arch-domain-models" }
arch-utils = { path = "crates/arch-utils" }

async-trait = "0.1.81"
serde_json = "1.0.114"
thiserror = "2.0.0"
tokio-graceful-shutdown = "0.15.0"
tracing-log = "0.2.0"

[workspace.dependencies.serde]
version = "1.0.197"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.39.1"
default-features = false
features = ["full"]

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["log"]

[workspace.dependencies.uuid]
version = "1.10.0"
features = ["serde", "v4"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling

[profile.dev]
split-debuginfo = "unpacked"
