[package]
name = "arch-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
arch-core.workspace = true

thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tracing.workspace = true

axum = "0.7.5"

[dependencies.hyper]
version = "1.3.1"
features = ["full"]

[dependencies.hyper-util]
version = "0.1.3"
features = ["tokio", "server-auto", "http1"]

[dependencies.tower]
version = "0.4.13"
features = ["util"]

[dependencies.tower-http]
version = "0.5.2"
features = ["timeout", "trace"]
