[package]
name = "rust-arch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
tracing-log = "0.2.0"

tokio.workspace = true
tracing.workspace = true

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["std", "fmt", "registry", "env-filter", "json"]
