[package]
name = "arch-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
tracing.workspace = true
