[package]
name = "arch-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "arch_db"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-log.workspace = true

[dependencies.sea-orm]
version = "1.0.0"
features = [
    "debug-print",
    "mock",
    "postgres-array",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-uuid",
]

[dependencies.sea-orm-migration]
version = "1.0.0"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "with-uuid",
]
