[package]
name = "rust-arch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
build = "build.rs"
publish = false

default-run = "rust-arch"

[[bin]]
name = "rust-arch"
path = "src/bin/rust-arch.rs"

[[bin]]
name = "migrator"
path = "src/bin/migrator.rs"

[lib]
name = "rust_arch"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
config = "0.14.0"
log = "0.4.22"

arch-api.workspace = true
arch-domain-core.workspace = true
arch-db.workspace = true

serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tracing.workspace = true
tracing-log.workspace = true

[dependencies.clap]
version = "4.5.13"
features = ["cargo", "derive", "env"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["std", "fmt", "registry", "env-filter", "json"]
